AndroidPanama: refactor _AndroidLinkerImpl